--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -7,4 +7,11 @@ pydantic>=2.5.0
 pydantic-settings>=2.1.0
 python-multipart>=0.0.6
 stripe>=7.0.0
+psycopg2-binary>=2.9.0
 Pillow>=10.0.0
+
+# Testing
+pytest>=7.4.0
+pytest-asyncio>=0.23.0
+pytest-cov>=4.1.0
+httpx>=0.26.0
